istio/02-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: microservices

spec:
  mtls:
    mode: STRICT
