istio/00-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: microservices

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - "*"
